# graphics-prep

./: .gitignore  CMakeLists.txt
src/: main.c
